--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               <p style="text-align:left">
                 <name>Fang Zhao</name>
               </p>
-              <p>I am a Senior Researcher in <a href="https://ai.tencent.com/ailab/en/index/">Tencent AI Lab</a>. My research currently is on 3D vision and deep learning.
+              <p>I am a Senior Researcher in <a href="https://ai.tencent.com/ailab/en/index/">Tencent AI Lab</a>. My research is currently on 3D vision and deep learning.
                 Prior to Tencent, I was a research scientist in Inception Institute of Artificial Intelligence (IIAI)</a> from 2018 to 2021,
                 where I worked with <a href="https://liaosc.wordpress.com/">Shengcai Liao</a>.
                 I was a research fellow in National University of Singapore (NUS) from 2015 to 2017, co-supervised by
