--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
               </p>
               <p>I am a Senior Researcher in <a href="https://ai.tencent.com/ailab/en/index/">Tencent AI Lab</a>. My research is currently on 3D vision and deep learning.
                 Prior to Tencent, I was a research scientist in Inception Institute of Artificial Intelligence (IIAI)</a> from 2018 to 2021,
-                where I worked with <a href="https://liaosc.wordpress.com/">Shengcai Liao</a>.
+                where I worked with <a href="https://liaosc.wordpress.com/">Shengcai Liao</a> and
+                <a href="https://scholar.google.com/citations?user=z84rLjoAAAAJ&hl=en">Ling Shao</a>.
                 I was a research fellow in National University of Singapore (NUS) from 2015 to 2017, co-supervised by
                 <a href="https://sites.google.com/site/jshfeng/">Jiashi Feng</a> and <a href="https://yanshuicheng.ai/">Shuicheng Yan</a>.
                 I received my Ph.D. degree from Institute of Automation, Chinese Academy of Sciences (CASIA)</a>
