--- a/index.html
+++ b/index.html
@@ -106,6 +106,62 @@
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
+                <img src='pics/awb.png' width=200; height="auto">
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://arxiv.org/pdf/2006.06525.pdf">
+                <font color=#1772d0>  <papertitle>Attentive WaveBlock: Complementarity-enhanced Mutual Networks for Unsupervised Domain
+                  Adaptation in Person Re-identification and Beyond</papertitle></font>
+              </a>
+              <br>
+              Wenhao Wang,
+              <strong>Fang Zhao</strong>,
+              Shengcai Liao,
+              Ling Shao
+              <br>
+              <em>Preprint</em>, 2020
+              <br>
+              <a href="https://arxiv.org/abs/2006.06525">arXiv</a> /
+              <a href="https://github.com/WangWenhao0716/Attentive-WaveBlock">Code</a> /
+              <a href="bibs/awb.bib">bibtex</a>
+              <p></p>
+              <p>This paper proposes a novel light-weight module, the Attentive WaveBlock (AWB), which can be integrated
+                into the dual networks of mutual learning to enhance the complementarity.</p>
+            </td>
+          </tr>
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <img src='pics/nrmt.png' width=200; height="auto">
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123560511.pdf">
+                <font color=#1772d0>  <papertitle>Unsupervised Domain Adaptation with Noise Resistible Mutual-Training
+                  for Person Re-identification</papertitle></font>
+              </a>
+              <br>
+              <strong>Fang Zhao</strong>,
+              Shengcai Liao,
+              Guo-Sen Xie,
+              Jian Zhao,
+              Kaihao Zhang,
+              Ling Shao
+              <br>
+              <em>ECCV</em>, 2020
+              <br>
+              <a href="bibs/nrmt.bib">bibtex</a>
+              <p></p>
+              <p>A Noise Resistible Mutual-Training (NRMT) method, which maintains two networks during training to perform
+                collaborative clustering and mutual instance selection.</p>
+            </td>
+          </tr>
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
                 <img src='pics/dcn.png' width=200; height="auto">
               </div>
             </td>
