--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
                 I received my Ph.D. degree from Institute of Automation, Chinese Academy of Sciences (CASIA)</a>
                 under the supervision of <a href="https://scholar.google.com/citations?user=8kzzUboAAAAJ&hl=en">Liang Wang</a>.
               </p>
+              <font color="red"><p><strong>Intern Positions at Tencent AI Lab:</strong> we are hiring self-motivated students as research interns,
+                please feel free to drop me an email if you are interested.</p></font>
               <p style="text-align:left">
                 <a href="mailto:zhaofang0627@gmail.com">Email</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=4C7mvOwAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
@@ -79,6 +81,34 @@
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
+                <img src='pics/awb.png' width=200; height="auto">
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://arxiv.org/pdf/2006.06525.pdf">
+                <font color=#1772d0>  <papertitle>Attentive WaveBlock: Complementarity-enhanced Mutual Networks for Unsupervised Domain
+                  Adaptation in Person Re-identification and Beyond</papertitle></font>
+              </a>
+              <br>
+              Wenhao Wang,
+              <strong>Fang Zhao</strong>,
+              Shengcai Liao,
+              Ling Shao
+              <br>
+              <em>TIP</em>, 2021
+              <br>
+              <a href="https://arxiv.org/abs/2006.06525">arXiv</a> /
+              <a href="https://github.com/WangWenhao0716/Attentive-WaveBlock">Code</a> /
+              <a href="bibs/awb.bib">bibtex</a>
+              <p></p>
+              <p>This paper proposes a novel light-weight module, the Attentive WaveBlock (AWB), which can be integrated
+                into the dual networks of mutual learning to enhance the complementarity.</p>
+            </td>
+          </tr>
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
                 <img src='pics/hpbtt.png' width=200; height="auto">
               </div>
             </td>
@@ -100,34 +130,6 @@
               <p></p>
               <p>A human parsing based texture transfer model via cross-view consistency learning which generates
                 the texture of 3D human body from a single image.</p>
-            </td>
-          </tr>
-
-          <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <div class="one">
-                <img src='pics/awb.png' width=200; height="auto">
-              </div>
-            </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://arxiv.org/pdf/2006.06525.pdf">
-                <font color=#1772d0>  <papertitle>Attentive WaveBlock: Complementarity-enhanced Mutual Networks for Unsupervised Domain
-                  Adaptation in Person Re-identification and Beyond</papertitle></font>
-              </a>
-              <br>
-              Wenhao Wang,
-              <strong>Fang Zhao</strong>,
-              Shengcai Liao,
-              Ling Shao
-              <br>
-              <em>Preprint</em>, 2020
-              <br>
-              <a href="https://arxiv.org/abs/2006.06525">arXiv</a> /
-              <a href="https://github.com/WangWenhao0716/Attentive-WaveBlock">Code</a> /
-              <a href="bibs/awb.bib">bibtex</a>
-              <p></p>
-              <p>This paper proposes a novel light-weight module, the Attentive WaveBlock (AWB), which can be integrated
-                into the dual networks of mutual learning to enhance the complementarity.</p>
             </td>
           </tr>
 
