--- a/index.html
+++ b/index.html
@@ -53,6 +53,37 @@
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
+                <img src='pics/anchordef.gif' width=200; height="auto">
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://arxiv.org/pdf/2304.00761.pdf">
+                <font color=#1772d0>  <papertitle>Learning Anchor Transformations for 3D Garment Animation</papertitle></font>
+              </a>
+              <br>
+              <strong>Fang Zhao</strong>,
+              Zekun Li,
+              Shaoli Huang,
+              Junwu Weng,
+              Tianfei Zhou,
+              Guo-Sen Xie,
+              Jue Wang,
+              Ying Shan
+              <br>
+              <em>CVPR</em>, 2023
+              <br>
+              <a href="https://arxiv.org/abs/2304.00761">arXiv</a> /
+              <a href="https://semanticdh.github.io/AnchorDEF">Project</a> /
+              <a href="bibs/anchor_def.bib">bibtex</a>
+              <p></p>
+              <p>This paper proposes an anchor-based deformation model, namely AnchorDEF, to predict 3D garment animation from a body motion sequence.</p>
+            </td>
+          </tr>
+
+          
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
                 <img src='pics/anchor_udf.png' width=200; height="auto">
               </div>
             </td>
