--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://arxiv.org/pdf/2304.00761.pdf">
+              <a href="https://openaccess.thecvf.com/content/CVPR2023/papers/Zhao_Learning_Anchor_Transformations_for_3D_Garment_Animation_CVPR_2023_paper.pdf">
                 <font color=#1772d0>  <papertitle>Learning Anchor Transformations for 3D Garment Animation</papertitle></font>
               </a>
               <br>
@@ -77,6 +77,67 @@
               <a href="bibs/anchor_def.bib">bibtex</a>
               <p></p>
               <p>This paper proposes an anchor-based deformation model, namely AnchorDEF, to predict 3D garment animation from a body motion sequence.</p>
+            </td>
+          </tr>
+
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <img src='pics/R2ET.gif' width=200; height="auto">
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://openaccess.thecvf.com/content/CVPR2023/papers/Zhang_Skinned_Motion_Retargeting_With_Residual_Perception_of_Motion_Semantics__CVPR_2023_paper.pdf">
+                <font color=#1772d0>  <papertitle>Skinned Motion Retargeting with Residual Perception of Motion Semantics & Geometry</papertitle></font>
+              </a>
+              <br>
+              Jiaxu Zhang,
+              Junwu Weng,
+              Di Kang,
+              <strong>Fang Zhao</strong>,
+              Shaoli Huang,
+              Xuefei Zhe,
+              Linchao Bao,
+              Ying Shan,
+              Jue Wang,
+              Zhigang Tu
+              <br>
+              <em>CVPR</em>, 2023
+              <br>
+              <a href="https://arxiv.org/abs/2303.08658">arXiv</a> /
+              <a href="https://semanticdh.github.io/R2ET">Project</a> /
+              <a href="bibs/R2ET.bib">bibtex</a>
+              <p></p>
+              <p>R2ET is a neural motion retargeting model that can preserve source motion semantics and avoid interpenetration in target motion.</p>
+            </td>
+          </tr>
+          
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <img src='pics/HMC.png' width=200; height="auto">
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://arxiv.org/pdf/2303.10941.pdf">
+                <font color=#1772d0>  <papertitle>HMC: Hierarchical Mesh Coarsening for Skeleton-free Motion Retargeting</papertitle></font>
+              </a>
+              <br>
+              Haoyu Wang,
+              Shaoli Huang,
+              <strong>Fang Zhao</strong>,
+              Chun Yuan,
+              Ying Shan
+              <br>
+              <em>arXiv preprint.</em>, 2023
+              <br>
+              <a href="https://arxiv.org/abs/2303.10941">arXiv</a> /
+              <a href="https://semanticdh.github.io/HMC">Project</a> /
+              <a href="bibs/HMC.bib">bibtex</a>
+              <p></p>
+              <p>HMC shows a simple yet effective way of better handling local-part motions in the skeleton-free motion retaregting task.</p>
             </td>
           </tr>
 
