--- a/index.html
+++ b/index.html
@@ -18,17 +18,15 @@
               <p style="text-align:left">
                 <name>Fang Zhao</name>
               </p>
-              <p>I am a Senior Researcher in <a href="https://ai.tencent.com/ailab/en/index/">Tencent AI Lab</a>. My research is currently on 3D vision and deep learning.
-                Prior to Tencent, I was a research scientist in Inception Institute of Artificial Intelligence (IIAI)</a> from 2018 to 2021,
-                where I worked with <a href="https://liaosc.wordpress.com/">Shengcai Liao</a> and
-                <a href="https://scholar.google.com/citations?user=z84rLjoAAAAJ&hl=en">Ling Shao</a>.
-                I was a research fellow in National University of Singapore (NUS) from 2015 to 2017, co-supervised by
-                <a href="https://sites.google.com/site/jshfeng/">Jiashi Feng</a> and <a href="https://yanshuicheng.ai/">Shuicheng Yan</a>.
+              <p> I am an Associate Professor at the School of Intelligence Science and Technology, Nanjing University. My research is currently on 3D vision and deep learning.
+                Previously, I was a senior researcher in <a href="https://ai.tencent.com/ailab/en/index/">Tencent AI Lab</a> from 2021 to 2023, and a research scientist in Inception Institute of Artificial Intelligence (IIAI) from 2018 to 2021,
+                where I worked with Prof. <a href="https://shengcailiao.github.io/">Shengcai Liao</a>.
+                I was a research fellow in National University of Singapore (NUS) from 2015 to 2017, co-supervised by Prof. <a href="https://sites.google.com/site/jshfeng/">Jiashi Feng</a> and Prof. <a href="https://yanshuicheng.info/">Shuicheng Yan</a>.
                 I received my Ph.D. degree from Institute of Automation, Chinese Academy of Sciences (CASIA)</a>
-                under the supervision of <a href="https://scholar.google.com/citations?user=8kzzUboAAAAJ&hl=en">Liang Wang</a>.
+                under the supervision of Prof. <a href="https://scholar.google.com/citations?user=8kzzUboAAAAJ&hl=en">Liang Wang</a>.
               </p>
-              <font color="red"><p><strong>Intern Positions at Tencent AI Lab:</strong> we are hiring self-motivated students as research interns,
-                please feel free to drop me an email if you are interested.</p></font>
+              <!--<font color="red"><p><strong>Intern Positions at Tencent AI Lab:</strong> we are hiring self-motivated students as research interns,
+                please feel free to drop me an email if you are interested.</p></font>-->
               <p style="text-align:left">
                 <a href="mailto:zhaofang0627@gmail.com">Email</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=4C7mvOwAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
