--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               <p style="text-align:left">
                 <name>Fang Zhao</name>
               </p>
-              <p> I am an Associate Professor at the School of Intelligence Science and Technology, Nanjing University. My research is currently on visual understanding in an open world and human-centric visual generation.
+              <p> I am an Associate Professor at the School of Intelligence Science and Technology, Nanjing University. My research is currently on visual understanding in an open world, transfer learning and anomaly detection.
                 Previously, I was a senior researcher in <a href="https://ai.tencent.com/ailab/en/index/">Tencent AI Lab</a> from 2021 to 2023, and a research scientist in Inception Institute of Artificial Intelligence (IIAI) from 2018 to 2021,
                 where I worked with Prof. <a href="https://shengcailiao.github.io/">Shengcai Liao</a>.
                 I was a research fellow in National University of Singapore (NUS) from 2015 to 2017, co-supervised by Prof. <a href="https://sites.google.com/site/jshfeng/">Jiashi Feng</a> and Prof. <a href="https://yanshuicheng.info/">Shuicheng Yan</a>.
